--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "truncate": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
