--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "truncate": "^3.0.0",
