--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "truncate": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
